# transporte-sp-origem-destino

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  pages.yml
data/raw/cnefe/2026-07-21/: manifest.json
data/raw/od_survey/2026-07-21/: manifest.json
pipeline/: pyproject.toml
pipeline/src/transporte_sp_od/: __init__.py  cli.py  config.py  geo.py  snapshot.py
pipeline/src/transporte_sp_od/export/: __init__.py
pipeline/src/transporte_sp_od/sources/: cnefe.py  survey.py
pipeline/tests/: test_demand.py  test_disaggregate.py  test_export.py  test_flows.py  test_geo.py
site/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
site/public/dados/: fluxos.parquet  fluxos.pmtiles  fluxos_10k.csv  fluxos_10k.parquet  fluxos_20k.csv  fluxos_20k.parquet  fluxos_50k.csv  fluxos_50k.parquet  resumo.json
site/src/: content.config.ts
site/src/components/: Downloads.astro  Mapa.astro  MapaFluxos.astro  Resumo.astro
site/src/content/docs/: dados.mdx  fontes.mdx  index.mdx  mapa.mdx  metodologia.mdx  viagens.mdx
site/src/scripts/: wrap-tables.js
site/src/styles/: custom.css  tables.css
